[gd_scene load_steps=7 format=3 uid="uid://4yj8qpkw5uv7"]

[ext_resource type="Script" path="res://scripts/menus/room_list_menu.gd" id="1_1npol"]
[ext_resource type="PackedScene" uid="uid://bw7ao7mg8lac4" path="res://scenes/menus/room_list_item.tscn" id="2_4bmkm"]
[ext_resource type="Theme" uid="uid://bcxinudc32lvt" path="res://assets/main_menu/button.tres" id="3_66daj"]
[ext_resource type="Texture2D" uid="uid://h0x34d23k63d" path="res://assets/main_menu/arrow_left_solid.svg" id="4_18ip2"]
[ext_resource type="Theme" uid="uid://bod1xtt36j7s6" path="res://assets/main_menu/pixelated_font.tres" id="4_ppbsl"]
[ext_resource type="StyleBox" uid="uid://sh13v0iog1jv" path="res://assets/main_menu/panel_container.tres" id="5_1kbtg"]

[node name="RoomListMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1npol")
room_list_item_scene = ExtResource("2_4bmkm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -172.5
offset_right = 142.0
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_66daj")
text = "Back"
icon = ExtResource("4_18ip2")

[node name="CustomRoomContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ppbsl")
theme_override_styles/panel = ExtResource("5_1kbtg")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CustomRoomContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CustomRoomContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CustomRoomContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "HAVE A ROOM ID?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CustomRoomContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RoomIDLineEdit" type="LineEdit" parent="VBoxContainer/CustomRoomContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
placeholder_text = "Enter the room id"

[node name="JoinRoomButton" type="Button" parent="VBoxContainer/CustomRoomContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Join"

[node name="RoomListContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ppbsl")
theme_override_styles/panel = ExtResource("5_1kbtg")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/RoomListContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/RoomListContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/RoomListContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ROOM LIST"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/RoomListContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/RoomListContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RoomListUpdateTimer" type="Timer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CustomRoomContainer/MarginContainer/VBoxContainer/HBoxContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
[connection signal="timeout" from="RoomListUpdateTimer" to="." method="_on_room_list_update_timer_timeout"]
